--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    services:
+      mongodb:
+        image: mongo
+        ports:
+          - 27017:27017
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -29,4 +33,4 @@ jobs:
       run: bun run build
       env:
         PAYLOAD_SECRET: "ci_super_secret_key_for_build_only"
-        DATABASE_URI: "mongodb://127.0.0.1/test" # Dummy URI for build process
+        DATABASE_URI: "mongodb://mongodb:27017/test"
