feat: sign in and sign up flows

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "db:seed": "bun run src/seed.ts"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.2.2",
+    "@hookform/resolvers": "3.9.1",
     "@payloadcms/db-mongodb": "^3.68.4",
     "@payloadcms/next": "^3.68.4",
     "@payloadcms/payload-cloud": "^3.68.4",
