--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "lucide-react": "^0.561.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "nuqs": "2.4.1",
     "payload": "^3.68.4",
     "react": "^19.0.0",
     "react-day-picker": "^9.12.0",
