--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "3.9.1",
-    "@payloadcms/db-mongodb": "^3.68.4",
-    "@payloadcms/next": "^3.68.4",
-    "@payloadcms/payload-cloud": "^3.68.4",
-    "@payloadcms/richtext-lexical": "^3.68.4",
+    "@payloadcms/db-mongodb": "3.33.0",
+    "@payloadcms/next": "3.33.0",
+    "@payloadcms/payload-cloud": "3.33.0",
+    "@payloadcms/plugin-multi-tenant": "3.33.0",
+    "@payloadcms/richtext-lexical": "3.33.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
@@ -60,7 +61,7 @@
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "nuqs": "2.4.1",
-    "payload": "^3.68.4",
+    "payload": "3.33.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.12.0",
     "react-dom": "^19.0.0",
